implement filter options component and update customers orders and products with filter options

--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -260,5 +260,31 @@
             "Search by customer name , phone number":"البحث حسب اسم العميل ورقم الهاتف",
             "Search by order number , customer name":"البحث حسب رقم الطلب أو اسم العميل",
             "Search by category name":"البحث حسب اسم الفئة",
-            "Search by variant name , variant type":"البحث حسب اسم المتغير، نوع المتغير"
+            "Search by variant name , variant type":"البحث حسب اسم المتغير، نوع المتغير",
+            "Returned":"مرتجع",
+            "Cancalled":"ملغي",
+            "Sort Orders":"ترتيب الطلبات",
+            "Order Number - Ascend":  "رقم الطلب - تصاعدياً",
+            "Order Number - Descend":  "رقم الطلب - تنازلياً",
+            "Order Total - Ascend":"إجمالي الطلب - تصاعدياً",
+            "Order Total - Descend":"إجمالي الطلب - تنازلياً",
+            "Order Date - Ascend":"تاريخ الطلب - تصاعدياً",
+            "Order Date - Descend":"تاريخ الطلب - تنازلياً",
+             "From":"من",
+             "To":"إلي",
+             "Search By Name or Phone":"البحث حسب الاسم أو الهاتف",
+             "Customer Status":"حاة العنيل",
+             "Gender":"النوع",
+             "Males":"ذكور",
+             "Females":"إناث",
+             "Register Date":"تاريخ التسجيل",
+             "Category":"الفئة",
+             "Price Range":"رينجالسعر",
+             "Min Price":"أقل سعر",
+             "Max Price":"أعلي سعر",
+             "Product Status":"حالة المنتج",
+             "Filter By":"تصفية حسب",
+             "In Stock":"متوفر",
+             "New Arrival":"جديد",
+             "Taxable products":"المنتجات الخاضعة للضريبة"
         }
