--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -263,5 +263,32 @@
   "Search by customer name , phone number":"Search by customer name , phone number",
   "Search by order number , customer name":"Search by order number , customer name",
   "Search by category name":"Search by category name",
-  "Search by variant name , variant type":"Search by variant name , variant type"
+  "Search by variant name , variant type":"Search by variant name , variant type",
+  "Returned":"Returned",
+  "Cancalled":"Cancalled",
+  "Sort Orders":"Sort Orders",
+  "Order Number - Ascend":  "Order Number - Ascend",
+  "Order Number - Descend":  "Order Number - Descend",
+  "Order Total - Ascend":"Order Total - Ascend",
+  "Order Total - Descend":"Order Total - Descend",
+  "Order Date - Ascend":"Order Date - Ascend",
+  "Order Date - Descend":"Order Date - Descend",
+   "From":"From",
+   "To":"To",
+   "Search By Name or Phone":"Search By Name or Phone",
+   "Customer Status":"Customer Status",
+   "Gender":"Gender",
+   "Males":"Males",
+   "Females":"Females",
+   "Register Date":"Register Date",
+   "Category":"Category",
+   "Price Range":"Price Range",
+   "Min Price":"Min Price",
+   "Max Price":"Max Price",
+   "Product Status":"Product Status",
+   "Filter By":"Filter By",
+   "In Stock":"In Stock",
+   "New Arrival":"New Arrival",
+   "Taxable products":"Taxable products"
+
 }
