--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -298,5 +298,6 @@
             "Enter Arabic Name":"أدخل الاسم العربي",
             "Add Category":"إضافة فئة",
             "Edit Category":"تعديل الفئة",
-            "Delete Category":"حذف الفئة"
+            "Delete Category":"حذف الفئة",
+            "variants":"المتغيرات"
         }
