--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -302,5 +302,5 @@
    "Enter Arabic Name":"Enter Arabic Name",
    "Add Category":"Add Category",
    "Edit Category":"Edit Category",
-   "Delete Category":"Delete Category"
+   "variants":"Variants"
 }
