add some missing traanslation messages

--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -299,5 +299,47 @@
             "Add Category":"إضافة فئة",
             "Edit Category":"تعديل الفئة",
             "Delete Category":"حذف الفئة",
-            "variants":"المتغيرات"
+            "variants":"المتغيرات",
+            "Price Affecting": " التأثير علي السعر",
+            "Product SKU": "رمز المنتج",
+            "Variant value": "قيمة المتغير",
+
+            "Add New Orders": "إضافة طلبات جديدة",
+            "Add New Order": "إضافة طلب جديد",
+            "Search by product name, category name or SKU": "البحث باسم المنتج أو الفئة أو رمز المنتج",
+            "Search by customer name, phone number": "البحث باسم العميل أو رقم الهاتف",
+            "Search by order number, customer name": "البحث برقم الطلب أو اسم العميل",
+            "Search by variant name, variant type": "البحث باسم المتغير أو نوعه",
+            "Search by variant type name": "البحث باسم نوع المتغير",
+            "Variant Types": "أنواع المتغيرات",
+            "Company Name (En)": "اسم الشركة (إنجليزي)",
+            "Company Name (Ar)": "اسم الشركة (عربي)",
+            "Email Addres": "البريد الإلكتروني",
+            "Country": "البلد",
+            "City": "المدينة",
+            "Address (En)": "العنوان (إنجليزي)",
+            "Address (Ar)": "العنوان (عربي)",
+            "Notes (En)": "ملاحظات (إنجليزي)",
+            "Notes (Ar)": "ملاحظات (عربي)",
+            "Birthday": "تاريخ الميلاد",
+            "CRN": "رقم السجل التجاري",
+            "VAT": "الرقم الضريبي",
+            "Governorate": "المحافظة",
+            "Street Number": "رقم الشارع",
+            "Building Number": "رقم المبنى",
+            "Filter Options": "خيارات التصفية",
+            "Product Description (Ar)": "وصف المنتج (عربي)",
+            "charge Tax": "تطبيق الضريبة",
+            "Charge": "تطبيق",
+            "Uncharge": "عدم التطبيق",
+            "yes": "نعم",
+            "no": "لا",
+            "Add Another Variant Library Value": "إضافة قيمة أخرى لمكتبة المتغيرات",
+            "Add new variant to library": "إضافة متغير جديد إلى المكتبة",
+            "Add Product Variant Option": "إضافة خيار متغير المنتج",
+            "Delete Product Varaiant Option": "حذف خيار متغير المنتج",
+            "Add new customer": "إضافة عميل جديد",
+            "Add New Customers": "إضافة عملاء جدد",
+            "Add New Customer": "إضافة عميل جديد"
+
         }
