--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -124,7 +124,7 @@
 
 
   "Add New Products":"Add New Products",
-  "Add new product":"Add new product",
+  "Add new product":"Add New product",
   "Start by stocking your store with products your customers will love":"Start by stocking your store with products your customers will love",
   "product has been deleted successfully":"product has been deleted successfully",
   "Product can not be deleted":"Product can not be deleted",
@@ -134,7 +134,7 @@
   "Enter Category Name":"Enter Category Name",
   "Add new Category":"Add New Category",
   "Add Categrory":"Add Categrory",
-  "Add new":"Add new",
+  "Add new":"Add New",
   "Choose Category":"Choose Category",
   "No Categories":"No Categories",
   "Category already exists":"Category already exists",
@@ -302,5 +302,43 @@
    "Enter Arabic Name":"Enter Arabic Name",
    "Add Category":"Add Category",
    "Edit Category":"Edit Category",
-   "variants":"Variants"
+   "variants":"Variants",
+
+   "Add New Orders":"Add New Orders",
+   "Add New Order":"Add New Order",
+   "Search by product name, category name or SKU":"Search by product name, category name or SKU",
+   "Search by customer name, phone number":"Search by customer name, phone number",
+   "Search by order number, customer name":"Search by order number, customer name",
+   "Search by variant name, variant type":"Search by variant name, variant type",
+   "Search by variant type name":"Search by variant type name",
+   "Variant Types":"Variant Types",
+   "Company Name (En)":"Company Name (En)",
+   "Company Name (Ar)":"Company Name (Ar)",
+   "Email Addres":"Email Addres",
+   "Country":"Country",
+   "City":"City",
+   "Address (En)":"Address (En)",
+   "Address (Ar)":"Address (Ar)",
+   "Notes (En)":"Notes (En)",
+   "Notes (Ar)":"Notes (Ar)",
+   "Birthday":"Birthday",
+   "CRN":"CRN",
+   "VAT":"VAT",
+   "Governorate":"Governorate",
+   "Street Number":"Street Number",
+   "Building Number":"Building Number",
+   "Filter Options":"Filter Options",
+   "Product Description (Ar)":"Product Description (Ar)",
+   "charge Tax":"charge Tax",
+   "Charge":"Charge",
+   "Uncharge":"Uncharge",
+   "yes":"Yes",
+   "no":"No",
+   "Add Another Variant Library Value":"Add Another Variant Library Value",
+   "Add new variant to library":"Add new variant to library",
+   "Add Product Variant Option":"Add Product Variant Option",
+   "Delete Product Varaiant Option":"Delete Product Varaiant Option",
+   "Add new customer":"Add New Customer",
+   "Add New Customers":"Add New Customers",
+   "Add New Customer":"Add New Customer"
 }
