implement guest guard to control auth module access

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -367,5 +367,5 @@
    "Failed to create Category": "Failed to create category",
    "Failed to create Product":   "Failed to create product",
     "Failed to create Variant":   "Failed to create variant",
-    "Failed to create Order":"Failed to create order",
+    "Failed to create Order":"Failed to create order"
 }
